Fixed list items not overflow wrapping on smaller screens

--- a/Source/Styles/Styles.css
+++ b/Source/Styles/Styles.css
@@ -211,5 +211,5 @@ code
 
 ul > li
 {
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
 }
